--- a/romanian.html
+++ b/romanian.html
@@ -29,12 +29,12 @@
         <div class="overlay"></div>
         <div class="container">
             <nav>
-                <h1 class="brand"><a href="index.html">L<span>T</span></a></h1>
+                <h1 class="brand"><a href="romanian.html">L<span>T</span></a></h1>
                 <ul>
                   
                     <li><a href="#welcome-section">Acasă</a></li>
                     <li><a href="#about-section">Despre</a></li>
-                    <li><a href="#skills">Abilități</a></li>
+                    <li><a href="#skills-section">Abilități</a></li>
                     <li><a href="#footer-above">Contact</a></li>
                     <li class = "but"><a href="index.html">EN</a></li>
                 </ul>
