--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                
                 <div class="border"></div>
                 <ul class="social"></ul>                               
-                                  <a href="https://www.linkedin.com/in/lucian-traistaru-a6660512b/" ><i class="fa fa-linkedin"></i></a>
+                                  <a href="https://www.linkedin.com/in/lucian-tr%C4%83istaru-a6660512b/" ><i class="fa fa-linkedin"></i></a>
                                   <a href="https://github.com/luciantr24" ><i class="fa fa-github"></i></a>
                                   <a href="https://twitter.com/LucianT4" ><i class="fa fa-twitter"></i></a>
                  </ul>             
@@ -192,7 +192,7 @@ I am open to new opportunities.
           <br>
           <br>
           <ul id="contact">
-              <li><a class="button social" href="https://www.linkedin.com/in/lucian-traistaru-a6660512b/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
+              <li><a class="button social" href="https://www.linkedin.com/in/lucian-tr%C4%83istaru-a6660512b/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
               <li><a class="button social" href="https://github.com/luciantr24" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>
               <li><a class="button social" href="https://twitter.com/LucianT4" target="_blank"><i class="fa  fa-fw fa-twitter"></i></a></li>
               <li><a class="button social" href="https://codepen.io/luciant24" target="_blank"><i class="fa  fa-fw fa-codepen"></i></a></li>
