--- a/romanian.html
+++ b/romanian.html
@@ -149,7 +149,7 @@
      
       <img src="2.png" class="img-responsive" style="width:100%" alt="Image">
       <p>Aplicație web pentru notițe</p>
-      <p>HTML/CSS/JavaScript</p>
+      <p>Vue/JavaScript/Firebase</p>
     </div>
     <div class="col-sm-3"> 
      
