--- a/index.html
+++ b/index.html
@@ -166,8 +166,9 @@ I am open to new opportunities.
         <div class="col-sm-3">
 
           <img src="3.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>Template Youtube convertor to mp3</p>
-          <p>Bootstrap/JavaScript</p>
+          <p>Blog for movie recommendations</p>
+          <p>Bootstrap/JavaScript/Firebase</p>
+          <a href = "https://moviefortonight.tk/" style="color:black">GO TO BLOG</a>
         </div>
         <div class="col-sm-3">
 
@@ -175,7 +176,8 @@ I am open to new opportunities.
           <p>For details check out my codepen profile <a href = "https://codepen.io/luciant24" class="aid">GO TO CODEPEN</a></p>
         </div>
       </div>
-    </div><br><br>
+    </div>
+    <br><br>
 
   </section>
 
