--- a/romanian.html
+++ b/romanian.html
@@ -154,8 +154,9 @@
     <div class="col-sm-3"> 
      
       <img src="3.png" class="img-responsive" style="width:100%" alt="Image">
-      <p>Template pentru convertor YouTube - mp3</p>
-      <p>Bootstrap/JavaScript</p>
+      <p>Blog pentru recomandari de filme</p>
+      <p>Bootstrap/JavaScript/Firebase</p>
+      <a href = "https://moviefortonight.tk/" style="color:black">MERGI SPRE BLOG</a>
     </div>
     <div class="col-sm-3">
       
