--- a/index.html
+++ b/index.html
@@ -173,7 +173,8 @@ I am open to new opportunities.
         <div class="col-sm-3">
 
           <img src="4.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>For details check out my codepen profile <a href = "https://codepen.io/luciant24" class="aid">GO TO CODEPEN</a></p>
+          <p>For details check out my codepen profile </p>
+            <a href = "https://codepen.io/luciant24" class="aid">GO TO CODEPEN</a>
         </div>
       </div>
     </div>
