--- a/romanian.html
+++ b/romanian.html
@@ -36,7 +36,7 @@
                       <li><a href="#skills-section">Abilități</a></li>
                       <li><a href="#proj">Proiecte</a></li>
                       <li><a href="#footer-above">Contact</a></li>
-                      <li class = "but"><a href="index.html"</a></li>
+                      <li class = "but"><a href="index.html"</a>EN</li>
                   </ul>
               </nav>
 
@@ -161,7 +161,8 @@
     <div class="col-sm-3">
       
       <img src="4.png" class="img-responsive" style="width:100%" alt="Image">
-      <p>Pentru detalii <a href = "https://codepen.io/luciant24" class="aid">PROFIL CODEPEN.io</a></p>
+      <p>Pentru detalii</p>
+         <a href = "https://codepen.io/luciant24" class="aid">PROFIL CODEPEN</a>
     </div>
   </div>
 </div><br><br>
