--- a/index.html
+++ b/index.html
@@ -132,13 +132,22 @@ I am open to new opportunities.
      <div class="container">
      <h3 class="text-center">Skills</h3>
      <div class="border"></div>
-     <div class="container" id="skills-section">
-       <div class="bar back advanced1" data-skill="Data analysis: R / Python"></div>
-       <div class="bar front advanced" data-skill="Web development, Front-end: HTML / CSS"></div>
-       <div class="bar back intermediate1" data-skill="Programming: C / C++ / C# / Java"></div>
-       <div class="bar front intermediate1" data-skill="Databases: SQL  "></div>
-       <div class="bar learning" data-skill="Back-end: JS / PHP / PHP MyAdmin"></div>
-       <div class="bar back intermediate2" data-skill="Statistics and analytics:Excel / SAS / SAS Enterprise Guide"></div>
+     <div class = "ed1">
+        <li>Programming</li>
+        <p>C / C++ / Java</p>
+        <br>
+        <li>Data analysis</li>
+        <p>R / Python</p>
+        <br>
+        <li>Database</li>
+        <p>SQL
+        </p>
+        <br>
+        <li>Web development</li>
+        <p>HTML / CSS / Bootstrap / Javascript</p>
+        <br>
+        <li>MS Office Suite</li>
+        <p>Word / Excel / PowerPoint</p>
         <br>
       </div>
      </div>
