--- a/romanian.html
+++ b/romanian.html
@@ -120,15 +120,26 @@
     <div class="container">
     <h3 class = "text-center">Abilități</h3>
      <div class="border"></div>
-    <div class="container" id="skills-section">
-      <div class="bar back advanced1" data-skill="Analiza datelor: R / Python"></div>
-      <div class="bar front advanced" data-skill="Dezvoltare web, Front-end: HTML / CSS"></div>
-      <div class="bar back intermediate1" data-skill="Programre: C / C++ / C# / Java"></div>
-      <div class="bar front intermediate1" data-skill="Baze de date: SQL  "></div>
-      <div class="bar learning" data-skill="Back-end: JS / PHP / PHP MyAdmin"></div>
-      <div class="bar back intermediate2" data-skill="Analiză:Excel / SAS / SAS Enterprise Guide"></div>
-      <br>
-    </div>
+   
+        <div class = "ed1">
+            <li>Programare</li>
+            <p>C / C++ / Java</p>
+            <br>
+            <li>Analiza datelor</li>
+            <p>R / Python</p>
+            <br>
+            <li>Baze de date</li>
+            <p>SQL
+            </p>
+            <br>
+            <li>Dezvoltare web</li>
+            <p>HTML / CSS / Bootstrap / Javascript</p>
+            <br>
+            <li>MS Office</li>
+            <p>Word / Excel / PowerPoint</p>
+            <br>
+          </div>
+   
     </div>
   </div>
 </section>
