--- a/romanian.html
+++ b/romanian.html
@@ -33,7 +33,7 @@
                     
                       <li><a href="#welcome-section">Acasă</a></li>
                       <li><a href="#about-section">Despre</a></li>
-                      <li><a href="#skills-section">Abilități</a></li>
+                      <li><a href="#skills">Abilități</a></li>
                       <li><a href="#proj">Proiecte</a></li>
                       <li><a href="#footer-above">Contact</a></li>
                       <li class = "but"><a href="index.html"</a>EN</li>
