--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <ul>
                     <li><a href="#welcome-section" style="background-color: none">Home</a></li>
                     <li><a href="#about-section">About</a></li>
-                    <li><a href="#skills-section">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#proj">Projects</a></li>
                     <li><a href="#footer-above">Contact</a></li>
                     <li class = "but"><a href="romanian.html">RO</a></li>
@@ -127,7 +127,7 @@ I am open to new opportunities.
 <br>
 
 
-<section class = "skills-section"></section>
+<section class = "skills-section" id="skills"></section>
   <div id="portfolio" class="jumbotron jumbotron-portfolio">
      <div class="container">
      <h3 class="text-center">Skills</h3>
