Small changes to the repository
Modified faculty name and added experience.

--- a/index.html
+++ b/index.html
@@ -107,16 +107,19 @@ I am open to new opportunities.
           <p>Constantin Brâncoveanu High School, Matematics and Informatics Profile</p>
           <br>
           <li>Oct 2016 - Jul 2019</li>
-          <p>Faculty of Cibernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
+          <p>Faculty of Cybernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
           <br>
           <li>Oct 2019 - Present</li>
-          <p> Master Degree - Information systems for the management of resources and economic processes (SIMPRE), ASE</p>
+          <p> Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
           <br>
           <h1>Experience</h1>
           <div class="border"></div>
           <li>March 2018 - May 2018</li>
           <p>Software developer, SIVECO S.A - Faculty practice</p>
-
+          <br>
+          <li>Jan 2020 - </li>
+          <p>DevOps /.net Developer, BearingPoint</p>
+          <br>
         </div>
       </div>
           </div>
