--- a/romanian.html
+++ b/romanian.html
@@ -106,6 +106,9 @@
           <li>Mar 2018 - Mai 2018</li>
           <p>Dezvoltator de software, SIVECO S.A - Practică facultate</p>
           <br>
+          <li>Ian 2020 - </li>
+          <p>DevOps /.net Developer, BearingPoint</p>
+          <br>
         </div>
           </div>
           </div>
