--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ I am open to new opportunities.
      <div class="border"></div>
      <div class = "ed1">
         <li>Programming</li>
-        <p>C / C++ / Java</p>
+        <p>C# / Java</p>
         <br>
         <li>Data analysis</li>
         <p>R / Python</p>
