--- a/romanian.html
+++ b/romanian.html
@@ -126,7 +126,7 @@
    
         <div class = "ed1">
             <li>Programare</li>
-            <p>C / C++ / Java</p>
+            <p>C# / Java</p>
             <br>
             <li>Analiza datelor</li>
             <p>R / Python</p>
