--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ I am open to new opportunities.
           <p>Software developer, SIVECO S.A - Faculty practice</p>
           <br>
           <li>Jan 2020 - </li>
-          <p>DevOps /.net Developer, BearingPoint</p>
+          <p>DevOps /.NET Developer, BearingPoint</p>
           <br>
         </div>
       </div>
