--- a/romanian.html
+++ b/romanian.html
@@ -107,7 +107,7 @@
           <p>Dezvoltator de software, SIVECO S.A - Practică facultate</p>
           <br>
           <li>Ian 2020 - </li>
-          <p>DevOps /.net Developer, BearingPoint</p>
+          <p>DevOps /.NET Developer, BearingPoint</p>
           <br>
         </div>
           </div>
