updated repo structure

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href = "style.css">
+    <link rel="stylesheet" href = "style/style.css">
 
 
-    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"/>
     <script src = "script.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-145860980-1"></script>
@@ -28,9 +28,6 @@
 
   </head>
   <body>
-
-
-
 
     <!-- Navigation bar -->
 <header>
@@ -165,26 +162,26 @@ I am open to new opportunities.
         <div class="border"></div>
         <div class="col-sm-3">
 
-          <img src="1.png" class="img-responsive" style="width:100%" alt="Image">
+          <img src="assets/1.png" class="img-responsive" style="width:100%" alt="Image">
           <p>E-commerce website for a University project</p>
           <p>HTML/CSS/PHP/PHPMyAdmin</p>
         </div>
         <div class="col-sm-3">
 
-          <img src="2.png" class="img-responsive" style="width:100%" alt="Image">
+          <img src="assets/2.png" class="img-responsive" style="width:100%" alt="Image">
           <p>Web application for saving notes</p>
           <p>Vue/JavaScript/Firebase</p>
         </div>
         <div class="col-sm-3">
 
-          <img src="3.png" class="img-responsive" style="width:100%" alt="Image">
+          <img src="assets/3.png" class="img-responsive" style="width:100%" alt="Image">
           <p>Blog for movie recommendations</p>
           <p>Bootstrap/JavaScript/Firebase</p>
           <a href = "https://moviefortonight.tk/" style="color:black">GO TO BLOG</a>
         </div>
         <div class="col-sm-3">
 
-          <img src="4.png" class="img-responsive" style="width:100%" alt="Image">
+          <img src="assets/4.png" class="img-responsive" style="width:100%" alt="Image">
           <p>For details check out my codepen profile </p>
             <a href = "https://codepen.io/luciant24" class="aid">GO TO CODEPEN</a>
         </div>
