--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-sclae=1.0">
-    <title>Lucian Trăistaru</title>
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href = "style/style.css">
-
-
+    <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <meta name="description" content="" />
+        <meta name="author" content="" />
+        <title>Lucian Traistaru | Portfolio</title>
+        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
+        <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+        <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" />
+        <link href="style/style.css" rel="stylesheet" />
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon"/>
     <link rel="shortcut icon" href="assets/favicon.ico" type="image/x-icon"/>
     <script src = "script.js"></script>
@@ -27,207 +26,213 @@
     </script>
 
   </head>
-  <body>
-
-    <!-- Navigation bar -->
-<header>
-        <div class="menu-toggle" id="hamburger">
-            <i class="fas fa-bars"></i>
-        </div>
-        <div class="overlay"></div>
+  <body id="page-top">
+    <!-- Navigation-->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container">
-            <nav>
-                <h1 class="brand"><a href="index.html">L<span>T</span></a></h1>
-                <ul>
-                    <li><a href="#welcome-section" style="background-color: none">Home</a></li>
-                    <li><a href="#about-section">About</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#proj">Projects</a></li>
-                    <li><a href="#footer-above">Contact</a></li>
-                    <li class = "but"><a href="romanian.html">RO</a></li>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">Lucian Traistaru</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto my-2 my-lg-0">
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
-            </nav>
-
-            <br>
-   <div id="welcome-section" class="intro">
-      <div class="starter-template">
-      <h1>Hello,</h1>
-      <p class="lead">I am Lucian Trăistaru</p>
-  </div>
-
-
-                <div class="border"></div>
-                <ul class="social"></ul>
-                                  <a href="https://www.linkedin.com/in/lucian-tr%C4%83istaru-a6660512b/" ><i class="fa fa-linkedin"></i></a>
-                                  <a href="https://github.com/luciantr24" ><i class="fa fa-github"></i></a>
-                                  <a href="https://twitter.com/LucianT4" ><i class="fa fa-twitter"></i></a>
-                 </ul>
-              </div>
-        </div>
-</header>
-
-
-
-<!-- ABOUT section-->
-<section class = "about">
-<div class="about-section" id="about-section">
-    <div class="inner-width">
-      <h1>About me</h1>
-      <div class="border"></div>
-      <div class="about-section-row">
-        <div class="about-section-col">
-          <div class="aboutme">
-          <h1>My name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
-
-I am a communicative person and open to learning new technologies that can change the world.
-I am open to new opportunities.
-          </h1>
-
             </div>
+        </div>
+    </nav>
+    <!-- Masthead-->
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row h-100 align-items-center justify-content-center text-center">
+                <div class="col-lg-10 align-self-end">
+                    <h1 class="text-uppercase text-white font-weight-bold">Welcome to my website</h1>
+                    <hr class="divider my-4" />
+                </div>
+                <div class="col-lg-8 align-self-baseline">
+                    <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">About me</a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- About-->
+    <section class="page-section bg-primary" id="about">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <h2 class="text-white mt-0">Few words about me..</h2>
+                    <hr class="divider light my-4" />
+                    <p class="text-white-50 mb-4">SMy name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
+                      I am a communicative person and open to learning new technologies that can change the world.</p>
+                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">Get Started!</a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Education section-->
+    <section class="page-section bg-primary" id="education">
+      <div class="container">
+          <div class="row justify-content-center">
+              <div class="col-lg-8 text-center">
+                  <h2 class="text-white mt-0">Few words about me..</h2>
+                  <hr class="divider light my-4" />
+                  <p class="text-white-50 mb-4">SMy name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
+                    I am a communicative person and open to learning new technologies that can change the world.</p>
+                  <a class="btn btn-light btn-xl js-scroll-trigger" href="#education">Get Started!</a>
+              </div>
           </div>
-        </div>
       </div>
-    </div>
-  </div>
-</section>
-
-
-<section class = "education">
-  <div class="education-section" >
-    <div class="inner-width">
-      <br>
-      <h1>Education</h1>
-
-      <div class="border"></div>
-        <div class = "ed1"></div>
-          <li>Sept 2012 - Jul 2016</li>
-          <p>Constantin Brâncoveanu High School, Matematics and Informatics Profile</p>
-          <br>
-          <li>Oct 2016 - Jul 2019</li>
-          <p>Faculty of Cybernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
-          <br>
-          <li>Oct 2019 - Present</li>
-          <p> Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
-          <br>
-          <h1>Experience</h1>
-          <div class="border"></div>
-          <li>March 2018 - May 2018</li>
-          <p>Software developer, SIVECO S.A - Faculty practice</p>
-          <br>
-          <li>Jan 2020 - </li>
-          <p>DevOps /.NET Developer, BearingPoint</p>
-          <br>
-        </div>
-      </div>
-          </div>
-    </div>
-  </div>
-</section>
-<br>
-<br>
-
-
-<section class = "skills-section" id="skills"></section>
-  <div id="portfolio" class="jumbotron jumbotron-portfolio">
-     <div class="container">
-     <h3 class="text-center">Skills</h3>
-     <div class="border"></div>
-     <div class = "ed1">
-        <li>Programming</li>
-        <p>C# / Java</p>
-        <br>
-        <li>Data analysis</li>
-        <p>R / Python</p>
-        <br>
-        <li>Database</li>
-        <p>SQL
-        </p>
-        <br>
-        <li>Web development</li>
-        <p>HTML / CSS / Bootstrap / Javascript</p>
-        <br>
-        <li>MS Office Suite</li>
-        <p>Word / Excel / PowerPoint</p>
-        <br>
-      </div>
-     </div>
-   </div>
-  </section>
-
-  <section id = "proj">
-  <div class="container-fluid bg-3 text-center">
-      <div class="row">
-        <br>
-        <h3 class = "text-center">Projects</h3>
-        <div class="border"></div>
-        <div class="col-sm-3">
-
-          <img src="assets/1.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>E-commerce website for a University project</p>
-          <p>HTML/CSS/PHP/PHPMyAdmin</p>
-        </div>
-        <div class="col-sm-3">
-
-          <img src="assets/2.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>Web application for saving notes</p>
-          <p>Vue/JavaScript/Firebase</p>
-        </div>
-        <div class="col-sm-3">
-
-          <img src="assets/3.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>Blog for movie recommendations</p>
-          <p>Bootstrap/JavaScript/Firebase</p>
-          <a href = "https://moviefortonight.tk/" style="color:black">GO TO BLOG</a>
-        </div>
-        <div class="col-sm-3">
-
-          <img src="assets/4.png" class="img-responsive" style="width:100%" alt="Image">
-          <p>For details check out my codepen profile </p>
-            <a href = "https://codepen.io/luciant24" class="aid">GO TO CODEPEN</a>
-        </div>
-      </div>
-    </div>
-    <br><br>
-
   </section>
 
 
-
-
-<footer>
-  <div id="footer-above">
-      <div>
-          <h3 class = "hclass">Find me on</h3>
-
-          <p>traistarulucian24@gmail.com</p>
-
-          <br>
-          <br>
-          <ul id="contact">
-              <li><a class="button social" href="https://www.linkedin.com/in/lucian-tr%C4%83istaru-a6660512b/" target="_blank"><i class="fa fa-fw fa-linkedin"></i></a></li>
-              <li><a class="button social" href="https://github.com/luciantr24" target="_blank"><i class="fa fa-fw fa-github"></i></a></li>
-              <li><a class="button social" href="https://twitter.com/LucianT4" target="_blank"><i class="fa  fa-fw fa-twitter"></i></a></li>
-              <li><a class="button social" href="https://codepen.io/luciant24" target="_blank"><i class="fa  fa-fw fa-codepen"></i></a></li>
-
-            </ul>
-      </div>
-  </div>
-  <div id="footer-below">Copyright &copy;
-      <script>
+    <!-- Services-->
+    <section class="page-section" id="skills">
+        <div class="container">
+            <h2 class="text-center mt-0">At Your Service</h2>
+            <hr class="divider my-4" />
+            <div class="row">
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-gem text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Sturdy Themes</h3>
+                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Up to Date</h3>
+                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-globe text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Ready to Publish</h3>
+                        <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-heart text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Made with Love</h3>
+                        <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Portfolio-->
+    <div id="portfolio">
+        <div class="container-fluid p-0">
+            <div class="row no-gutters">
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
+                        <div class="portfolio-box-caption">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
+                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
+                        <div class="portfolio-box-caption p-3">
+                            <div class="project-category text-white-50">Category</div>
+                            <div class="project-name">Project Name</div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Call to action-->
+    <section class="page-section bg-dark text-white">
+        <div class="container text-center">
+          <h2 class="mt-0">Let's Get In Touch!</h2>
+            <h3>traistarulucian24@gmail.com</h3>
+        </div>
+    </section>
+    <!-- Contact-->
+    <section class="page-section" id="contact">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <hr class="divider my-4" />
+                    <p class="text-muted mb-5">Or see you on social media</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
+                    <i class="fab fa-linkedin fa-3x mb-3 text-muted"></i>
+                    <a href="https://www.linkedin.com/in/lucian-tr%C4%83istaru-a6660512b/" class="d-block">Linkedin</a>
+                </div>
+                <div class="col-lg-4 mr-auto text-center">
+                  <i class="fab fa-github fa-3x mb-3 text-muted"></i>
+                  <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                  <a href="https://github.com/luciantr24" class="d-block">GitHub</a>
+              </div>
+              <div class="col-lg-4 mr-auto text-center">
+                <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
+                <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
+                <a href="https://twitter.com/LucianT4" class="d-block">Twitter</a>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- Footer-->
+    <footer class="bg-light py-5">
+        <div class="container"><div class="small text-center text-muted">Copyright © <script>
           document.write(new Date().getFullYear());
-      </script> Lucian Trăistaru.
-  </div>
-</footer>
-<!-- Footer Section End -->
-
-<div id="scrolltop">
-  <a href="#">
-      <i class="fa fa-angle-up"></i>
-  </a>
-</div>
-
-<script src = "script.js"></script>
-
-
+      </script> - Lucian Traistaru</div></div>
+    </footer>
+    <!-- Bootstrap core JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <!-- Third party plugin JS-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <!-- Core theme JS-->
+    <script src="scripts/script.js"></script>
 </body>
 </html>
