updates website sections

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education and Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
@@ -66,23 +66,36 @@
                     <hr class="divider light my-4" />
                     <p class="text-white-50 mb-4">SMy name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
                       I am a communicative person and open to learning new technologies that can change the world.</p>
-                    <a class="btn btn-light btn-xl js-scroll-trigger" href="#about">Get Started!</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!--Education section-->
-    <section class="page-section bg-primary" id="education">
+    <section class="page-section bg-dark text-white" id="education">
       <div class="container">
           <div class="row justify-content-center">
               <div class="col-lg-8 text-center">
-                  <h2 class="text-white mt-0">Few words about me..</h2>
-                  <hr class="divider light my-4" />
-                  <p class="text-white-50 mb-4">SMy name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
-                    I am a communicative person and open to learning new technologies that can change the world.</p>
-                  <a class="btn btn-light btn-xl js-scroll-trigger" href="#education">Get Started!</a>
-              </div>
+                  <h2 class="text-white mt-0">Education</h2>
+                  <hr class="divider my-4"/>
+                      <li>Sept 2012 - Jul 2016</li>
+                      <p>Constantin Brâncoveanu High School, Matematics and Informatics Profile</p>
+                      <br>
+                      <li>Oct 2016 - Jul 2019</li>
+                      <p>Faculty of Cybernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
+                      <br>
+                      <li>Oct 2019 - Present</li>
+                      <p> Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
+                      <br>
+                      <h1>Experience</h1>
+                      <hr class="divider my-4" />
+                      <li>March 2018 - May 2018</li>
+                      <p>Software developer, SIVECO S.A - Faculty practice</p>
+                      <br>
+                      <li>Jan 2020 - </li>
+                      <p>DevOps /.NET Developer, BearingPoint</p>
+                      <br>
+                  </div>
           </div>
       </div>
   </section>
@@ -91,106 +104,72 @@
     <!-- Services-->
     <section class="page-section" id="skills">
         <div class="container">
-            <h2 class="text-center mt-0">At Your Service</h2>
+            <h2 class="text-center mt-0">Skills</h2>
             <hr class="divider my-4" />
             <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-gem text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Sturdy Themes</h3>
-                        <p class="text-muted mb-0">Our themes are updated regularly to keep them bug free!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
                         <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Up to Date</h3>
-                        <p class="text-muted mb-0">All dependencies are kept current to keep things fresh.</p>
+                        <h3 class="h4 mb-2">Programming</h3>
+                        <p class="text-muted mb-0">C# / Net.Framework & Net.Core</p>
+                        <p class="text-muted mb-0">Node.js</p>
+                        <p class="text-muted mb-0">Java / Python</p>
+                        <p class="text-muted mb-0">C / C++</p>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                  <div class="mt-5">
+                      <i class="fas fa-4x fa-database text-primary mb-4"></i>
+                      <h3 class="h4 mb-2">Databases</h3>
+                      <p class="text-muted mb-0">SQL Databases: MySQL</p>
+                      <p class="text-muted mb-0">No SQL Databases: Azure CosmosDB / MongoDB</p>
+                  </div>
+              </div>
+                <div class="col-lg-3 col-md-6 text-center">
+                    <div class="mt-5">
+                        <i class="fas fa-4x fa-file-code text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">Web Development</h3>
+                        <p class="text-muted mb-0">HTML / CSS</p>
+                        <p class="text-muted mb-0">Bootstrap</p>
+                        <p class="text-muted mb-0">React.js / JavaScript / CSS</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <i class="fas fa-4x fa-globe text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Ready to Publish</h3>
-                        <p class="text-muted mb-0">You can use this design as is, or you can make changes!</p>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 text-center">
-                    <div class="mt-5">
-                        <i class="fas fa-4x fa-heart text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">Made with Love</h3>
-                        <p class="text-muted mb-0">Is it really open source if it's not made with love?</p>
+                        <i class="fas fa-4x fa-server text-primary mb-4"></i>
+                        <h3 class="h4 mb-2">DevOps</h3>
+                        <p class="text-muted mb-0">Azure Devops</p>
+                        <p class="text-muted mb-0">Azure KeyValut</p>
+                        <p class="text-muted mb-0">Azure ServiceBus</p>
+                        <p class="text-muted mb-0">Docker</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
     <!-- Portfolio-->
-    <div id="portfolio">
-        <div class="container-fluid p-0">
-            <div class="row no-gutters">
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/1.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/1.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/2.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/2.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/3.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/3.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/4.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/4.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/5.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/5.jpg" alt="" />
-                        <div class="portfolio-box-caption">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-4 col-sm-6">
-                    <a class="portfolio-box" href="assets/img/portfolio/fullsize/6.jpg">
-                        <img class="img-fluid" src="assets/img/portfolio/thumbnails/6.jpg" alt="" />
-                        <div class="portfolio-box-caption p-3">
-                            <div class="project-category text-white-50">Category</div>
-                            <div class="project-name">Project Name</div>
-                        </div>
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- About-->
+    <section class="page-section bg-primary" id="PORTFOLIO">
+      <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8 text-center">
+                  <h2 class="text-white mt-0">Personal Projects I worked on..</h2>
+                  <hr class="divider light my-4" />
+                    <p>Take Notes App / Movie Blog </p>
+                    <p>Web Api with .Net Core & Node.js for interacting with MySql and NoSql databases</p>
+                    <p>Desktop application - Covid Tracker</p>
+                    <p>Web application - Covid Tracker</p>
+                    <p>Weather web application</p>
+                    <p>Desktop application - Students mangement system</p>
+              </div>
+          </div>
+      </div>
+  </section>
     <!-- Call to action-->
     <section class="page-section bg-dark text-white">
         <div class="container text-center">
           <h2 class="mt-0">Let's Get In Touch!</h2>
-            <h3>traistarulucian24@gmail.com</h3>
+            <h3 class="mt-0">traistarulucian24@gmail.com</h3>
         </div>
     </section>
     <!-- Contact-->
