ain't much but small refactoring

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Few words about me..</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white-50 mb-4">SMy name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
+                    <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
                       I am a communicative person and open to learning new technologies that can change the world.</p>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                       <li>March 2018 - May 2018</li>
                         <p>Software developer, SIVECO S.A - Faculty practice</p>
                       <br>
-                      <li>Jan 2020 - </li>
+                      <li>Jan 2020 - Now</li>
                         <p>DevOps /.NET Developer, BearingPoint</p>
                       <br>
                   </div>
@@ -187,12 +187,10 @@
                 </div>
                 <div class="col-lg-4 mr-auto text-center">
                   <i class="fab fa-github fa-3x mb-3 text-muted"></i>
-                  <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                   <a href="https://github.com/luciantr24" class="d-block">GitHub</a>
               </div>
               <div class="col-lg-4 mr-auto text-center">
                 <i class="fab fa-twitter fa-3x mb-3 text-muted"></i>
-                <!-- Make sure to change the email address in BOTH the anchor text and the link target below!-->
                 <a href="https://twitter.com/LucianT4" class="d-block">Twitter</a>
             </div>
             </div>
