added new design

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education and Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#PORTFOLIO">Portfolio</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
                 </ul>
             </div>
@@ -64,7 +64,7 @@
                     <h2 class="text-white mt-0">Few words about me..</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
-                      I am a communicative person and open to learning new technologies that can change the world.</p>
+                      I am a communicative person and open to learning new technologies.</p>
                 </div>
             </div>
         </div>
@@ -99,7 +99,6 @@
       </div>
   </section>
 
-
     <!-- Services-->
     <section class="page-section" id="skills">
         <div class="container">
@@ -112,6 +111,7 @@
                         <h3 class="h4 mb-2">Programming</h3>
                         <p class="text-muted mb-0">C# / Net.Framework & Net.Core</p>
                         <p class="text-muted mb-0">Node.js</p>
+                        <p class="text-muted mb-0">Mobile / Xamarin</p>
                         <p class="text-muted mb-0">Java / Python</p>
                         <p class="text-muted mb-0">C / C++</p>
                     </div>
@@ -121,7 +121,7 @@
                       <i class="fas fa-4x fa-database text-primary mb-4"></i>
                       <h3 class="h4 mb-2">Databases</h3>
                       <p class="text-muted mb-0">SQL Databases: MySQL</p>
-                      <p class="text-muted mb-0">No SQL Databases: Azure CosmosDB / MongoDB</p>
+                      <p class="text-muted mb-0">No SQL Databases: Azure CosmosDB / MongoDB / FirebaseDatabase</p>
                   </div>
               </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -141,6 +141,7 @@
                         <p class="text-muted mb-0">Azure KeyValut</p>
                         <p class="text-muted mb-0">Azure ServiceBus</p>
                         <p class="text-muted mb-0">Docker</p>
+                        <p class="text-muted mb-0">CI / CD</p>
                     </div>
                 </div>
             </div>
@@ -155,11 +156,12 @@
                   <h2 class="text-white mt-0">Personal Projects I worked on..</h2>
                   <hr class="divider light my-4" />
                     <p>Take Notes App / Movie Blog </p>
-                    <p>Web Api with .Net Core & Node.js for interacting with MySql and NoSql databases</p>
+                    <p>REST APIs with .Net Core & Node.js for interacting with SQL and No-SQL databases</p>
                     <p>Desktop application - Covid Tracker</p>
                     <p>Web application - Covid Tracker</p>
                     <p>Weather web application</p>
                     <p>Desktop application - Students mangement system</p>
+                    <p>Mobile application developed with Xamarin for football team/players tracker</p>
               </div>
           </div>
       </div>
@@ -177,7 +179,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <hr class="divider my-4" />
-                    <p class="text-muted mb-5">Or see you on social media</p>
+                    <p class="text-muted mb-5">You can also find me on social media</p>
                 </div>
             </div>
             <div class="row">
