changed some data

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <p>Software developer, SIVECO S.A - Faculty practice</p>
                       <br>
                       <li>Jan 2020 - Now</li>
-                        <p>DevOps /.NET Developer, BearingPoint</p>
+                        <p>.NET Developer | DevOps, BearingPoint</p>
                       <br>
                   </div>
           </div>
