fixed some typo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <h2 class="text-white mt-0">Few words about me..</h2>
                     <hr class="divider light my-4" />
                     <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
-                      I am a communicative person and open to learning new technologies.</p>
+                      I am a communicative person and open to learn new technologies.</p>
                 </div>
             </div>
         </div>
@@ -109,9 +109,9 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Programming</h3>
-                        <p class="text-muted mb-0">C# / Net.Framework & Net.Core</p>
+                        <p class="text-muted mb-0">C# / .NET Framework & .NET Core</p>
                         <p class="text-muted mb-0">Node.js</p>
-                        <p class="text-muted mb-0">Mobile / Xamarin</p>
+                        <p class="text-muted mb-0">Xamarin</p>
                         <p class="text-muted mb-0">Java / Python</p>
                         <p class="text-muted mb-0">C / C++</p>
                     </div>
@@ -120,8 +120,8 @@
                   <div class="mt-5">
                       <i class="fas fa-4x fa-database text-primary mb-4"></i>
                       <h3 class="h4 mb-2">Databases</h3>
-                      <p class="text-muted mb-0">SQL Databases: MySQL</p>
-                      <p class="text-muted mb-0">No SQL Databases: Azure CosmosDB / MongoDB / FirebaseDatabase</p>
+                      <p class="text-muted mb-0">SQL</p>
+                      <p class="text-muted mb-0">No SQL: Azure CosmosDB / MongoDB / Firebase</p>
                   </div>
               </div>
                 <div class="col-lg-3 col-md-6 text-center">
