updated some details

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="col-lg-8 text-center">
                     <h2 class="text-white mt-0">Few words about me..</h2>
                     <hr class="divider light my-4" />
-                    <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 22 year old student from Bucharest, Romania.
-                      I am a communicative person and open to learn new technologies.</p>
+                    <p class="text-white mt-0">My name is Lucian Trăistaru, I am a 24 year old and working as a Software Developer in Bucharest, Romania.
+                      I am a communicative person and eager to learn new things.</p>
                 </div>
             </div>
         </div>
@@ -83,7 +83,7 @@
                       <li>Oct 2016 - Jul 2019</li>
                         <p>Faculty of Cybernetics, Statistics and Economic Informatics, Academy of Economic Studies, Bucharest, Romania</p>
                       <br>
-                      <li>Oct 2019 - Present</li>
+                      <li>Oct 2019 - Jul 2021</li>
                         <p> Master Degree - Information systems for the management of economic processes and resources (SIMPRE), ASE</p>
                       <br>
                       <h1>Experience</h1>
@@ -92,7 +92,7 @@
                         <p>Software developer, SIVECO S.A - Faculty practice</p>
                       <br>
                       <li>Jan 2020 - Now</li>
-                        <p>.NET Developer | DevOps, BearingPoint</p>
+                        <p>Software Developer, BearingPoint Romania</p>
                       <br>
                   </div>
           </div>
@@ -109,39 +109,43 @@
                     <div class="mt-5">
                         <i class="fas fa-4x fa-laptop-code text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Programming</h3>
-                        <p class="text-muted mb-0">C# / .NET Framework & .NET Core</p>
+                        <p class="text-muted mb-0">C#/.NET</p>
                         <p class="text-muted mb-0">Node.js</p>
                         <p class="text-muted mb-0">Xamarin</p>
-                        <p class="text-muted mb-0">Java / Python</p>
-                        <p class="text-muted mb-0">C / C++</p>
+                        <p class="text-muted mb-0">Java/Python</p>
+                        <p class="text-muted mb-0">C/C++</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                   <div class="mt-5">
                       <i class="fas fa-4x fa-database text-primary mb-4"></i>
                       <h3 class="h4 mb-2">Databases</h3>
-                      <p class="text-muted mb-0">SQL</p>
-                      <p class="text-muted mb-0">No SQL: Azure CosmosDB / MongoDB / Firebase</p>
+                      <p class="text-muted mb-0">MySql</p>
+                      <p class="text-muted mb-0">Azure CosmosDB</p>
+                      <p class="text-muted mb-0">MongoDb</p>
+                      <p class="text-muted mb-0">Google Firebase</p>
                   </div>
               </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-file-code text-primary mb-4"></i>
                         <h3 class="h4 mb-2">Web Development</h3>
-                        <p class="text-muted mb-0">HTML / CSS</p>
+                        <p class="text-muted mb-0">React.js/Material UI/Context API/Redux</p>
+                        <p class="text-muted mb-0">JavaScript</p>
+                        <p class="text-muted mb-0">HTML/CSS</p>
                         <p class="text-muted mb-0">Bootstrap</p>
-                        <p class="text-muted mb-0">React.js / JavaScript / CSS</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
                         <i class="fas fa-4x fa-server text-primary mb-4"></i>
-                        <h3 class="h4 mb-2">DevOps</h3>
+                        <h3 class="h4 mb-2">DevOps & Other tools</h3>
                         <p class="text-muted mb-0">Azure Devops</p>
                         <p class="text-muted mb-0">Azure KeyValut</p>
                         <p class="text-muted mb-0">Azure ServiceBus</p>
                         <p class="text-muted mb-0">Docker</p>
-                        <p class="text-muted mb-0">CI / CD</p>
+                        <p class="text-muted mb-0">GIT</p>
+                        <p class="text-muted mb-0">CI/CD with Azure Pipeline/Heroku</p>
                     </div>
                 </div>
             </div>
@@ -162,6 +166,7 @@
                     <p>Weather web application</p>
                     <p>Desktop application - Students mangement system</p>
                     <p>Mobile application developed with Xamarin for football team/players tracker</p>
+                    <p>Project management application with features as Kanban board, notifications support in Slack and much more</p>
               </div>
           </div>
       </div>
